Closed
Bug 1096128
Opened 10 years ago
Closed 10 years ago
[B2G][STK] support call number modified by STK call control
Categories
(Firefox OS Graveyard :: RIL, defect)
Firefox OS Graveyard
RIL
Tracking
(blocking-b2g:2.1+, firefox34 wontfix, firefox35 wontfix, firefox36 fixed, b2g-v2.0 wontfix, b2g-v2.0M fixed, b2g-v2.1 fixed, b2g-v2.2 fixed)
People
(Reporter: jocheng, Assigned: hsinyi)
References
Details
Attachments
(1 file)
5.44 KB,
patch
|
bajaj
:
approval-mozilla-b2g34+
|
Details | Diff | Splinter Review |
+++ This bug was initially created as a clone of Bug #986308 +++
Created an attachment (id=671243)
soul 3.5 fail log
+++ This bug was initially created as a clone of Bug #409505 +++
DEFECT DESCRIPTION:
[STK]call established not control by call control with modify command
REPRODUCING PROCEDURES:
1.load one simulated SIM card and SATK application which can send "call
control" command;
2.power on phone and run the case SATK->CALL control->STN08005->CC Alpha ID
present;
3.dialling number not modify by control command--->KO
from the network emulator, the call has already been modified ,but ME still keep display the old dial number.
EXPECTED BEHAVIOUR:
call control command can rightly execute ,ME will display the modified dial number.
ASSOCIATE SPECIFICATION:
TEST PLAN REFERENCE:
TS spec 11.14
TOOLS AND PLATFORMS USED:
V10I+AA.
USER IMPACT:
Middle.
REPRODUCING RATE:
2/2.
For FT PR, Please list reference mobile's behavior:
++++++++++ end of initial bug #409505 description ++++++++++
Reporter | ||
Updated•10 years ago
|
status-b2g-v2.0:
--- → wontfix
status-b2g-v2.0M:
--- → fixed
status-b2g-v2.1:
--- → affected
status-b2g-v2.2:
--- → fixed
Reporter | ||
Comment 1•10 years ago
|
||
Hi Bhavana,
This is certification blocker for TCL per https://bugzilla.mozilla.org/show_bug.cgi?id=986308#c11.
Hsin-Yi has provided patch for 2.0M and m/c on bug 986308.
Could you assess whether we should also fix this in 2.1? Thank you!
Flags: needinfo?(bbajaj)
Reporter | ||
Updated•10 years ago
|
Summary: [B2G][STK][Woodduck] support call number modified by STK call control → [B2G][STK] support call number modified by STK call control
Comment 3•10 years ago
|
||
(In reply to Josh Cheng [:josh] from comment #1)
> Hi Bhavana,
> This is certification blocker for TCL per
> https://bugzilla.mozilla.org/show_bug.cgi?id=986308#c11.
> Hsin-Yi has provided patch for 2.0M and m/c on bug 986308.
> Could you assess whether we should also fix this in 2.1? Thank you!
Given this is a partner cert blocker its fine to land. But given the patches in 986308 fix the issue and have changes to ril_worker.js, Anshul can you help comment is these changes are fine to be uplifted on CAF side.
Also NI :hsinyi to help assess the risk of uplift for patches in 986308
Flags: needinfo?(htsai)
Flags: needinfo?(bbajaj)
Flags: needinfo?(anshulj)
Bhavna, yes it is fine to be uplifted to 2.1.
Flags: needinfo?(anshulj)
Comment 5•10 years ago
|
||
Thanks Anshul. Hsinyi you have a chance to comment on the risk here and think its manageable please seek approval for uplifts for b2g34 branch.
Assignee | ||
Comment 6•10 years ago
|
||
(In reply to bhavana bajaj [:bajaj] from comment #5)
> Thanks Anshul. Hsinyi you have a chance to comment on the risk here and
> think its manageable please seek approval for uplifts for b2g34 branch.
The risk is low given the changes are straight-forward. I'll provide a b2g34 patch later, thanks.
Assignee | ||
Comment 7•10 years ago
|
||
https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=61f4d68dc781 wait for try before asking for approval
Assignee | ||
Comment 8•10 years ago
|
||
NOTE: Please see https://wiki.mozilla.org/Release_Management/B2G_Landing to better understand the B2G approval process and landings.
[Approval Request Comment]
Bug caused by (feature/regressing bug #): bug 986308, a certification blocker
User impact if declined: certification fails and user cannot get the right call number
Testing completed: yes, and also landed on m-c, 2.0m already
Risk to taking this patch (and alternatives if risky): low
String or UUID changes made by this patch: no
Flags: needinfo?(htsai)
Attachment #8525028 -
Flags: approval-mozilla-b2g34?
Updated•10 years ago
|
Attachment #8525028 -
Flags: approval-mozilla-b2g34? → approval-mozilla-b2g34+
Updated•10 years ago
|
blocking-b2g: --- → 2.1+
Assignee | ||
Comment 9•10 years ago
|
||
checkin-needed for *v2.1* only (landed on m-c already in bug 986308)
https://treeherder.mozilla.org/ui/#/jobs?repo=try&revision=61f4d68dc781 try looks good
Keywords: checkin-needed
Comment 10•10 years ago
|
||
NI :kwierso for help on checkin-needed given ryan is out for a bit.
Flags: needinfo?(kwierso)
Pushed to b2g34_v2_1 in https://hg.mozilla.org/releases/mozilla-b2g34_v2_1/rev/d7b12401107c
This doesn't need to get into Firefox 34 (mozilla-beta), correct?
Flags: needinfo?(kwierso)
Keywords: checkin-needed
Comment 12•10 years ago
|
||
(In reply to Wes Kocher (:KWierso) from comment #11)
> Pushed to b2g34_v2_1 in
> https://hg.mozilla.org/releases/mozilla-b2g34_v2_1/rev/d7b12401107c
>
> This doesn't need to get into Firefox 34 (mozilla-beta), correct?
correct, let me wontfix it.
Updated•10 years ago
|
status-firefox34:
--- → wontfix
status-firefox35:
--- → wontfix
Reporter | ||
Updated•10 years ago
|
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Updated•10 years ago
|
You need to log in
before you can comment on or make changes to this bug.
Description
•