Bug 1096128 - [B2G][STK] support call number modified by STK call control. r=aknow, a=bbajaj